kubernetes/apps/default/bentopdf/app/httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "BentoPDF"
    gethomepage.dev/group: "Applications"
    gethomepage.dev/icon: "fa://fa-file-pdf"
    gethomepage.dev/href: "https://bentopdf.${DOMAIN}"
  name: bentopdf
spec:
  hostnames:
    - bentopdf.${DOMAIN}
  parentRefs:
    - name: envoy-internal
      namespace: network
      sectionName: https
  rules:
    - backendRefs:
        - name: bentopdf
          port: 80
